finish th eproject .finally

--- a/index.html
+++ b/index.html
@@ -204,9 +204,9 @@
       <div class="buttons">
         <button type="button" class="btn btn-primary btn-sm remaining"></button>
       <div class="filter">
-        <button type="button" class="btn btn-primary btn-sm all-filter">All</button>
+        <!-- <button type="button" class="btn btn-primary btn-sm all-filter">All</button>
         <button type="button" class="btn btn-primary btn-sm active-filter">Active</button>
-        <button type="button" class="btn btn-primary btn-sm completed-filter">Completed</button>
+        <button type="button" class="btn btn-primary btn-sm completed-filter">Completed</button> -->
       </div>
       
       <button type="button" class="btn btn-primary btn-sm clear-completed">Clear completed</button>
