--- a/index.html
+++ b/index.html
@@ -156,7 +156,10 @@
   background-color:hsl(280, 88%, 35%) ;
   color: black;
 }
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 375px) {
+  body {
+    background-color: yellow;
+  }
   #todo-element{
         width: 300px;
 
