--- a/index.html
+++ b/index.html
@@ -169,6 +169,12 @@
     .buttons{
       width: 300px;
     }
+    #upper-header{
+      width: 400px;
+    }
+    #bottom-header{
+      width:400px;
+    }
 
   }
     
